--- a/2020-02/200203 TIL.md
+++ b/2020-02/200203 TIL.md
@@ -1,4 +1,4 @@
-## 200203 TIL
+# 200203 TIL
 
 
 
@@ -28,10 +28,10 @@
 - CMD꾸미기
 
 Jack이 cmd테마가 변경되지않다고 지적하여 cmd를 고치기 시작했다. 기존 ubuntu에서 zsh -> oh-my-zsh로 바꾸고 테마 설정하는데 8시30분에서 11시까지 걸렸다. 현재 wsl로 실행하여 ubuntu에서는 테마 적용이 완벽히 되었으나 powershell이나 bash실행시 오류가 나기 때문에  powershell은 docker용으로만 써야겠다.
-
 intellij에서 wsl지원을 안해주는걸 알았다. 12시까지 넘어서 삽질해서 얻은건 터미널을 잘 적용해서 쓰려면 
+듀얼부팅이 답이라는걸 깨달았다. 다신 윈도우에 터미널 작업을 하지않겠다.
 
-듀얼부티이 답이라는걸 깨달았다. 다신 윈도우에 터미널 작업을 하지않겠다.
+
 
 ---
 
@@ -41,20 +41,19 @@ intellij에서 wsl지원을 안해주는걸 알았다. 12시까지 넘어서 삽
 
 - Java의 정석 1권
 - Step1, Step2, Step3까지 PR하기
-
 - 알고리즘 1문제풀기
 
 ---
 
 
 
-### 이번달 목표
+## 이번달 목표
 
 **블로그 만들기(velog,medium) | notion 만들기 | 알고리즘 최소한 15문제는 풀기 | **
 
 
 
-### honux가 말한 일일 목표
+## honux가 말한 일일 목표
 
 최소 10분이라도 한다면 체크!
 
