--- a/2020-02/200225 TIL.md
+++ b/2020-02/200225 TIL.md
@@ -25,16 +25,15 @@
 
 #### 오전
 
-- step2 마무리해보기 (password.html 기능추가)
+- 이마트 쇼핑
 
 #### 오후
 
-- step2 마무리하고 PR보내기 (제발 ㅠㅠ)
-- 조용호 개발자 만나기? 과연?
+- http&network책 읽기
 
 #### 저녁
 
-- Hello coding chapter4 하기
+- Hello coding chapter4 마무리 + chapter5
 
 ---
 
@@ -51,6 +50,6 @@
 최소 10분이라도 한다면 체크!
 
 - [x] 코딩하기
-- [ ] 독서
+- [x] 독서
 - [x] 운동
 - [ ] 영어
