--- a/2020-03/200317 TIL.md
+++ b/2020-03/200317 TIL.md
@@ -3,30 +3,24 @@
 ## 오늘 한 일
 
 - 웹서버 만들기
-  - HTTPRequest, HTTPResponse GET 메서드
+  - HTTPRequest 회원가입시 GET메서드, POST 메서드
+  - Redirection
 - 푸시업 120개
-- 스프링 입문을 위한 자바 객체 지향의 원리와 이해
+- 스프링 입문을 위한 자바 객체 지향의 원리와 이해 (가벼운 독서)
 
 ## 오늘의 생각
 
-- 페어 프로그래밍을 본격적으로 진행했다. 실력차이가 나는 바람에 제대로 된 페어 프로그래밍은 하질 못했지만 나에겐
-  정말 배울점이 많았다. 오늘 보면서 배울점은 바로 커밋 가이드와 git stash이다.
-- 커밋할 때
-
-```
-기능구현에 대한 간략한 제목
-
-- 해당 기능, 메서드에 대한 설명.
-- 왜 이렇게 코드를 작성했는가.
-```
-
-- Vim을 배워보자. 페어 프로그래밍할 때 껏다 켰다하기 귀찮다. 이 기회에 배워놓자.
+- 오늘 처음으로 밤코딩했다. 사람들이 밤늦게까지 하는 모습을 보고 열심히 해야겠다는 생각이 들었으나, 나같은 경우에는 늦게까지 하는것보다 오히려 집에가서 쉰 다음에 마무리 학습하는 것이 훨씬 나은듯.
+- Postman으로 웹서버 진행시 localhost:8080으로 보내면 자꾸 커넥션을 null값을 보내준다. Postman으로 웹서버제작시 주의할 것. IP주소를 직접 입력하고 나머지 URI를 적을 것.
+- nullPoint에러가 너무 무섭다. 한단계 진행할 때마다 계속 생긴다. 이번에 느낀건 그럴때마다 과감하게 logger를 적어보고 debugger를 자주 사용하자. 어디가 잘못 되었는지 금방 찾을 수 있다.
+- 중간중간 구현할 때 뭐해야할지 몰라서 페어프로그래밍중에 침묵할 때가 많다. 미리 영상이나 예습을 통해 진행을 이어나갈수 있도록 하자.
 
 ------
 
 ## 내일 할 일
 
 - 웹서버 만들기 진행하기
+- honux 수업
 - step5 진행하기
 
 ------
