--- a/2020-04/200407 TIL.md
+++ b/2020-04/200407 TIL.md
@@ -95,7 +95,7 @@ compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.17'
 
 ```properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://15.165.109.128:3306/example?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://ip주소:3306/데이터베이스이름?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=데이터베이스 유저
 spring.datasource.password=비밀번호
 ```
